compiler/tools/fpp-check/test/internal_port/duplicate.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/internal_port/duplicate.fpp: 5.3
  internal port p
  ^
error: duplicate port instance p
previous instance is here:
[ local path prefix ]/compiler/tools/fpp-check/test/internal_port/duplicate.fpp: 3.3
  internal port p
  ^
